syntax = "proto3";

option go_package = "cere.network/ddc-storage-node/pb";

message Signature {
    Algorithm algorithm = 1;
    bytes signer = 2;
    bytes value = 3;

    enum Algorithm {
      ED_25519 = 0;
      SR_25519 = 1;
    }
}
